--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
 
-    <meta name="description" content="Nexus Aquarium is located in city of Washington, which is the one of well known place for tourism. Aquarium is very huge and comprises of marine life animals and they are fed and breeding. It is the big centre for organizing the school events for the purpose of study and so on. For the children to visit an aquarium is big thing as they love to sea creatures.">
-
-    <meta name="keywords" content="aquarium, fishes, sea creatures, turtles, sharks, gold fishes, nexus aquarium, fish, fish tank aquatic plants, fresh water, animals, marine life, tourism, aquatic tour, museum, aquatic museum, marine museum, seafood, underwater, fishmonger, fishy, fishpond, fishpool, turtles, ">
-
     <!-- ****** ANGULAR JS ****** -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-route/1.8.2/angular-route.min.js" referrerpolicy="no-referrer"></script>
@@ -32,12 +28,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     <!-- ****** CUSTOM CSS FILES ****** -->
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <title>Welcome To Nexus Aquarium | Home For Sea Creatures</title>
+    <link rel="stylesheet" href="static/css/header.css">
+    <link rel="stylesheet" href="static/css/footer.css">
+    <link rel="stylesheet" href="static/css/config.css">
+    <title>Hygieia</title>
 </head>
-<body ng-app = "myApp">
+<body ng-app = "myApp" style="height: fit-content;">
     
     <header ng-include = " 'header.html' " ></header>
 
@@ -60,6 +56,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js" integrity="sha512-q583ppKrCRc7N5O0n2nzUiJ+suUv7Et1JGels4bXOaMFQcamPk9HjdUknZuuFjBNs7tsMuadge5k9RzdmO+1GQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- ****** CUSTOM JS ****** -->
-    <script src="assets/js/app.js"></script>
+    <script src="static/js/app.js"></script>
 </body>
 </html>
