--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg sticky-top">
+<nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand ms-5 text-green" href="#">Hygieia</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,13 +7,13 @@
       <div class="collapse navbar-collapse ms-5" id="navbarSupportedContent">
         <ul class="navbar-nav ms-5 mb-2 mb-lg-0">
           <li class="nav-item mx-5">
-            <a class="nav-link active" aria-current="page" href="#!/home#home-top">Home</a>
+            <a class="nav-link active text-green" aria-current="page" href="#!/home#home-top">Home</a>
           </li>
           <li class="nav-item mx-5">
-            <a class="nav-link" href="#!/doctors#doctors-top">Link</a>
+            <a class="nav-link text-green" href="#!/doctors#doctors-top">Link</a>
           </li>
           <li class="nav-item mx-5">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link text-green" href="#">Link</a>
           </li>
       </div>
     </div>
