--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
             <a class="nav-link active" aria-current="page" href="#!/home#home-top">Home</a>
           </li>
           <li class="nav-item mx-5">
-            <a class="nav-link" href="#!/doctors#doctors-top">Link</a>
+            <a class="nav-link" href="#!/doctors#doctors-top">Meet Doctors</a>
           </li>
           <li class="nav-item mx-5">
             <a class="nav-link" href="#">Link</a>
