--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="static/css/header.css">
     <link rel="stylesheet" href="static/css/footer.css">
     <link rel="stylesheet" href="static/css/config.css">
+    <link rel="stylesheet" href="static/css/doctor.css">
     <title>Hygieia</title>
 </head>
 <body ng-app = "myApp" style="height: fit-content;">
