--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="static/css/footer.css">
     <link rel="stylesheet" href="static/css/config.css">
     <link rel="stylesheet" href="static/css/main.css">
+    <base href="https://hygieiaa.netlify.app/">
+    <!-- <base href="/"> -->
     <title>Hygieia</title>
 </head>
 <body ng-app = "myApp" style="height: fit-content;">
