--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,9 @@
-<footer>
-    
+<footer class=" container-fluid p-5  d-block text-center">
+  <h3>Hygieia</h3>
+  <ul>
+    <li>Home</li>
+    <li>Meet Doctors</li>
+    <li>Details</li>
+  </ul>
+  <p>Copyright &copy;2022 All rights reserved</p>
 </footer>
