--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="static/css/main.css">
     <link rel="stylesheet" href="static/css/doctor.css">
     <link rel="stylesheet" href="static/css/config.css">
+    <link rel="stylesheet" href="static/css/footer.css">
     <!-- <base href="https://hygieiaa.netlify.app/"> -->
     <base href="/">
     <title>Hygieia</title>
