bro am done with the footer
i am coming to school soon i noticed some things we need to change on small screen

--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,8 @@
 <footer class=" container-fluid p-5  d-block text-center">
-  <h3>Hygieia</h3>
-  <ul>
+  <h2>Hygieia</h2>
+  <ul class="d-flex list-unstyled justify-content-center m-4" >
     <li>Home</li>
-    <li>Meet Doctors</li>
+    <li class="px-3">Meet Doctors</li>
     <li>Details</li>
   </ul>
   <p>Copyright &copy;2022 All rights reserved</p>
